--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ social:
 version:              3.1.3
 
 github:
-  repo:               https://github.com/madebyconnor/change
+  repo:               https://
 
 
 # Integrations
@@ -58,12 +58,12 @@ github:
 google_fonts:
   Overpass:           400, 600, 800
 
-google_analytics_key: UA-94021817-2
-# google_site_verification: Z-pc_HPc4XNBz8xg1fgtxO2MSIYLirZc2jWTNq0bJyM
+google_analytics_key:
+# google_site_verification:
 
 
 # Content
 excerpt_separator: <!-- Read more -->
 
 navigation:
-  GitHub: https://github.com/madebyconnor/change
+  GitHub: 
